<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="java.util.ArrayList"/>
        <import type="com.example.pickme.objects.PickUpPoint" />
        <variable
            name="iMainActivity"
            type="com.example.pickme.IMainActivity" />
        <variable
            name="vehicleView"
            type="com.example.pickme.viewmodels.VehicleViewModel" />

        <variable
            name="pickupPoints"
            type="ArrayList&lt;PickUpPoint&gt;" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.ViewVehicleFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{vehicleView.vehicle.saccoName + '\t' + vehicleView.vehicle.regNumber}"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/vehiclePic"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    app:imageUrl="@{vehicleView.vehicle.imageUrl}"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/vehicle_image_desc_text"
                    />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:layout_marginBottom="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/vehicleViewScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/vehicleDetailContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/vehicleRouteName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vehicleView.vehicle.route.routeName}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/numberOfPassLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/string_passengers_on_board"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toStartOf="@id/guideline4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vehicleRouteName" />

                <TextView
                    android:id="@+id/numberOfBookedSpacesLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/string_booked_spaces"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toStartOf="@id/verticalHalfGuideline"
                    app:layout_constraintStart_toEndOf="@id/numberOfPass"
                    app:layout_constraintTop_toBottomOf="@id/vehicleRouteName" />

                <TextView
                    android:id="@+id/totalCapacityLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/string_total_capacity"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/verticalHalfGuideline"
                    app:layout_constraintTop_toBottomOf="@id/vehicleRouteName" />

                <TextView
                    android:id="@+id/numberOfPass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{String.valueOf(vehicleView.vehicle.noOfPassOnBoard)}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@id/guideline4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/numberOfPassLabel" />

                <TextView
                    android:id="@+id/totalCapacity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{String.valueOf(vehicleView.vehicle.totalCapacity)}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/verticalHalfGuideline"
                    app:layout_constraintTop_toTopOf="@+id/numberOfBookings" />

                <TextView
                    android:id="@+id/numberOfBookings"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="center"
                    android:text="@{String.valueOf(vehicleView.vehicle.noOfBookings)}"
                    app:layout_constraintEnd_toEndOf="@id/verticalHalfGuideline"
                    app:layout_constraintStart_toEndOf="@id/guideline4"
                    app:layout_constraintTop_toTopOf="@+id/numberOfPass" />


                <TextView
                    android:id="@+id/pickUpPointsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:text="@string/string_route_points"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/numberOfPass" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/vehicleRoutePointsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:minHeight="500dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pickUpPointsTitle"
                    app:pickUpPointsList="@{pickupPoints}" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/verticalHalfGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.67" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".3" />

                <Button
                    android:id="@+id/checkOutBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_check_out"
                    android:layout_marginTop="@dimen/fab_margin"
                    app:layout_constraintTop_toBottomOf="@id/vehicleRoutePointsRecycler"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            android:onClick="@{() -> iMainActivity.reserveSpace(vehicleView)}"
            app:srcCompat="@android:drawable/ic_menu_save"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>